@@ -7,6 +7,7 @@
 	- French translation update
 	- menuprogreload menu keyword added (Konstantin Korikov)
 	  syntax: menuprogreload title icon timeout command ...
+	- battery status display for FreeBSD (Hanspeter Roth)
 
 1.2.15pre3: 2004-08-01
 	- icesound gcc 2.95.3 compile fix (Thomas Zajic)
